--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://sanchita-mohanty.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sanchita-pm.github.io/sanchita-mohanty.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -24,9 +24,16 @@
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^3.5.2"
   },
+  "devDependencies": {
+    "@iconify-icons/logos": "^1.1.9",
+    "@iconify/react": "^4.1.1",
+    "gh-pages": "^6.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,9 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@iconify-icons/logos": "^1.1.9",
-    "@iconify/react": "^4.1.1"
   }
 }
